--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@marko/webpack": "^2.1.0",
         "css-loader": "^3.4.2",
+        "file-loader": "^6.0.0",
         "mini-css-extract-plugin": "^0.9.0",
         "p2": "^0.7.1",
         "style-loader": "^1.1.3",
